# gpui

./: .gitignore  .gitmodules  AGENTS.md  Agent.md  Cargo.toml  README.md  WARP.md
app/ai-chat/: Cargo.toml  MANUAL_TESTING.md  README.md  build.rs  diesel.toml
app/ai-chat/docs/dev/: README.md  fresh-database-schema.md  issue-137-llm-abstractions.md  issue-159-ai-chat2-agent-conversation-page.md  issue-159-ai-chat2-built-in-tools-approval.md  issue-159-ai-chat2-chat-form-multimodal.md  issue-159-ai-chat2-composer-editor.md  issue-159-ai-chat2-composer-model-picker.md  issue-159-ai-chat2-prompt-settings.md  issue-159-ai-chat2-provider-settings.md  issue-159-ai-chat2-shortcut-settings.md  issue-159-ai-chat2-sidebar.md  issue-159-ai-chat2-skill-settings.md  issue-159-ai-chat2-temporary-window.md  issue-159-ai-chat2-ui.md
app/ai-chat/docs/features/: README.md
app/ai-chat/docs/testing/: ui-ux-audit.md
app/ai-chat/docs/tests/: README.md
app/ai-chat/extensions/url_search/: Cargo.toml
app/ai-chat/locales/en-US/: main.ftl
app/ai-chat/locales/zh-CN/: main.ftl
app/ai-chat/migrations/2025-12-23-141452-0000_create_tables/: down.sql  up.sql
app/ai-chat/migrations/2026-03-08-000000_create_tables_v3/: down.sql  up.sql
app/ai-chat/migrations/2026-03-15-000000_create_tables_v4/: up.sql
app/ai-chat/migrations/2026-03-20-000000_create_tables_v5/: down.sql  up.sql
app/ai-chat/migrations/2026-05-20-000000_create_tables_v6/: down.sql  up.sql
app/ai-chat/scripts/: bundle-windows.ps1  bundle.sh
app/ai-chat/src/: adapter.rs  app.rs  assets.rs  capture.rs  components.rs  config.rs  database.rs  errors.rs  export.rs  extensions.rs  features.rs  fetch.rs  foundation.rs  gpui_ext.rs  hotkey.rs  i18n.rs  llm.rs  main.rs  platform.rs  screen.rs  search.rs  state.rs  store.rs  tray.rs  views.rs  workspace_state.rs  workspace_state_tests.rs
app/ai-chat/src/adapter/: openai.rs  openai_stream.rs
app/ai-chat/src/app/: menus.rs  tray.rs
app/ai-chat/src/components/: add_conversation.rs  add_folder.rs  chat_form.rs  chat_input.rs  delete_confirm.rs  ext_setting_help.rs  hotkey_input.rs  message.rs  provider_chat_form.rs  provider_template_form.rs  search_list.rs  template_edit_dialog.rs  title_bar_menu.rs
app/ai-chat/src/database/: bootstrap.rs  migrations.rs  model.rs  schema.rs  service.rs  types.rs
app/ai-chat/src/extensions/: component.rs
app/ai-chat/src/features/: about.rs  home.rs  hotkey.rs  screenshot.rs  settings.rs  temporary.rs
app/ai-chat/src/fetch/: types.rs
app/ai-chat/src/foundation/: assets.rs  capabilities.rs  i18n.rs
app/ai-chat/src/hotkey/: shortcut_flow.rs  temporary_window.rs
app/ai-chat/src/llm/: preset.rs  provider.rs  run_persistence.rs  runner.rs  types.rs
app/ai-chat/src/platform/: capture.rs  display.rs  gpui_ext.rs
app/ai-chat/src/state/: chat.rs  config.rs  theme.rs  workspace.rs
app/ai-chat/src/store/: models.rs  runtime.rs  state.rs
app/ai-chat/src/views/: about.rs  conversation.rs  conversation_detail.rs  home.rs  message_preview.rs  screenshot_overlay.rs  settings.rs  temporary.rs
app/ai-chat2/: Cargo.toml  build.rs
app/ai-chat2/locales/en-US/: main.ftl
app/ai-chat2/locales/zh-CN/: main.ftl
app/ai-chat2/src/: app.rs  components.rs  database.rs  errors.rs  features.rs  foundation.rs  main.rs  state.rs
app/ai-chat2/src/app/: about.rs  menus.rs  placeholder_windows.rs  temporary_window.rs  (+1 more)
app/feiwen/: Cargo.toml  README.md
app/feiwen/docs/: advanced-query-prd.md  fetch-workflow-prd.md
app/feiwen/src/: app.rs  components.rs  errors.rs  features.rs  fetch.rs  foundation.rs  i18n.rs  main.rs  store.rs
app/http-client/: Cargo.toml
app/http-client/src/: errors.rs  features.rs  http_body.rs  http_form.rs  http_headers.rs  http_method.rs  http_params.rs  http_tab.rs  i18n.rs  main.rs  url_input.rs
app/jaco/: Cargo.toml  build.rs
app/jaco/src/: app.rs  components.rs  database.rs  errors.rs  main.rs  platform.rs  state.rs
app/novel-download/: Cargo.toml
app/novel-download/src/: errors.rs  features.rs  foundation.rs  i18n.rs  main.rs  views.rs
crates/ai-chat-agent/: Cargo.toml
crates/ai-chat-agent/src/: approval.rs  builtin_tools.rs  error.rs  history.rs  lib.rs  mcp.rs  model_capabilities.rs  persistence.rs  provider_models.rs  reasoning_params.rs  runtime.rs  skills.rs  tool_registry.rs  types.rs
crates/ai-chat-db/: Cargo.toml
crates/ai-chat-db/src/: error.rs  lib.rs  migrations.rs  models.rs  records.rs  repository.rs  schema.rs  store.rs  tests.rs
crates/app-theme/: Cargo.toml
crates/app-theme/src/: lib.rs  tests.rs
crates/gpui-form/: Cargo.toml  README.md  README.zh-CN.md
crates/gpui-form/dev/: README.md  typed-form-store.md
crates/gpui-form/docs/: README.md  array-design.md  binding-architecture.md  development-plan.md  external-state-synchronization-plan.md  guide.md  guide.zh-CN.md  macro-generation-boundary.md  meta-and-submit-state.md  number-input-design.md  phase-1-development-plan.md  submit-handler-design.md  validation-pipeline-strengthening-plan.md  validation-routing.md
crates/gpui-form/src/: array.rs  component.rs  control.rs  core.rs  error.rs  field.rs  form.rs  lib.rs  macro_support.rs  path.rs  pipeline.rs  schema.rs  submit.rs  test_support.rs  transform.rs  trigger.rs  typed.rs  validation.rs
crates/gpui-form/tests/: core.rs  corrective_garde.rs  corrective_transactions.rs  corrective_validation.rs  derive.rs  nested_validation.rs  submit.rs  ui.rs  validation.rs
crates/gpui-tokio/: Cargo.toml
crates/gpui-tokio/src/: lib.rs
crates/jaco-db/: Cargo.toml
crates/jaco-db/src/: migrations.rs  models.rs  records.rs  repository.rs  schema.rs  store.rs  tests.rs
crates/platform-ext/: Cargo.toml  build.rs
crates/platform-ext/src/: app.rs  appearance.rs  capture.rs  error.rs  lib.rs  ocr.rs
crates/window-ext/: Cargo.toml
crates/window-ext/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: bundle.rs  cli.rs  cmd.rs  context.rs  error.rs  main.rs  manifest.rs
tools/mcp-auth-test-server/: Cargo.toml  README.md
tools/mcp-auth-test-server/src/: main.rs
(+942 files in other folders)
