[workspace]
members = [
  "app/ai-chat",
  "app/feiwen",
  "app/http-client",
  "app/novel-download",
  "crates/app-assets",
  "crates/platform-ext",
  "crates/window-ext",
  "crates/xtask",
]

resolver = "2"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
# Optional, for default bundled assets
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component-assets" }
app-assets = { path = "./crates/app-assets" }
window-ext = { path = "./crates/window-ext" }
platform-ext = { path = "./crates/platform-ext" }

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-macros = { git = "https://github.com/zed-industries/zed", package = "gpui_macros" }

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = true

[profile.dev.package]
proc-macro2 = { opt-level = 3 }
quote = { opt-level = 3 }
syn = { opt-level = 3 }
taffy = { opt-level = 3 }
resvg = { opt-level = 3 }
gpui = { opt-level = 3 }
gpui-component = { opt-level = 3 }

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[profile.release.package]
ai-chat = { codegen-units = 16 }

[profile.release-fast]
inherits = "release"
debug = "full"
lto = false
codegen-units = 16
