[workspace]
members = [
  "app/jaco",
  "app/feiwen",
  "app/http-client",
  "app/novel-download",
  "crates/app-assets",
  "crates/app-assets-macros",
  "crates/app-theme",
  "crates/jaco-agent",
  "crates/jaco-core",
  "crates/jaco-db",
  "crates/gpui-form",
  "crates/gpui-form-gpui-component",
  "crates/gpui-form-macros",
  "crates/gpui-store",
  "crates/gpui-tokio",
  "crates/platform-ext",
  "crates/window-ext",
  "crates/xtask",
]

resolver = "2"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed", version = "=0.2.2" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
# Optional, for default bundled assets
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component-assets" }
jaco-core = { path = "./crates/jaco-core" }
jaco-db = { path = "./crates/jaco-db" }
jaco-agent = { path = "./crates/jaco-agent" }
app-assets = { path = "./crates/app-assets" }
app-theme = { path = "./crates/app-theme", default-features = false }
gpui-form = { path = "./crates/gpui-form", features = ["garde-adapter", "validify-transform"] }
gpui-form-gpui-component = { path = "./crates/gpui-form-gpui-component" }
gpui-form-macros = { path = "./crates/gpui-form-macros" }
gpui-store = { path = "./crates/gpui-store" }
gpui-tokio = { path = "./crates/gpui-tokio" }
garde = { version = "0.23.0", default-features = false, features = ["derive", "url", "email", "pattern"] }
window-ext = { path = "./crates/window-ext" }
platform-ext = { path = "./crates/platform-ext" }
rig-core = { version = "0.39.0", features = ["rmcp"] }
rmcp = { version = "1.8.0", features = [
  "auth",
  "client",
  "macros",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
] }

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed", version = "=0.2.2" }
gpui-macros = { git = "https://github.com/zed-industries/zed", package = "gpui_macros" }

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = true

[profile.dev.package]
proc-macro2 = { opt-level = 3 }
quote = { opt-level = 3 }
syn = { opt-level = 3 }
taffy = { opt-level = 3 }
resvg = { opt-level = 3 }
gpui = { opt-level = 3 }
gpui-component = { opt-level = 3 }

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[profile.release.package]
jaco = { codegen-units = 16 }

[profile.release-fast]
inherits = "release"
debug = "full"
lto = false
codegen-units = 16
