[package]
name = "ai-chat"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[package.metadata.bundle]
name = "AI Chat"
identifier = "top.sushao.ai-chat"
publisher = "CN=Sushao"
icon = [
  "build-assets/icon/app-icon.ico",
  "build-assets/icon/app-icon.iconset/icon_32x32.png",
  "build-assets/icon/app-icon.iconset/icon_128x128.png",
  "build-assets/icon/app-icon.iconset/icon_128x128@2x.png",
  "build-assets/icon/app-icon.iconset/icon_256x256.png",
  "build-assets/icon/app-icon.iconset/icon_256x256@2x.png",
  "build-assets/icon/app-icon.iconset/icon_512x512.png",
  "build-assets/icon/app-icon.iconset/icon_512x512@2x.png",
]
short_description = "A desktop AI chat app built with GPUI."
long_description = """
AI Chat is a GPUI-based desktop application with chat history, templates,
streaming responses, and web search support.
"""
category = "DeveloperTool"

[features]
dhat-heap = ["dep:dhat"]

[dependencies]
dhat = { version = "0.3.3", optional = true }
# ui
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets = { workspace = true }
window-ext = { workspace = true }
platform-ext = { workspace = true }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }
anyhow = "1.0.102"

# i18n
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
sys-locale = "0.3.2"

# err
thiserror = "2.0.18"

# database
diesel = { version = "2.3.7", features = [
  "sqlite",
  "r2d2",
  "time",
  "returning_clauses_for_sqlite_3_35",
  "serde_json",
] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled-windows"] }
dirs-next = "2.0.0"
time = { version = "0.3.47", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
pinyin = "0.11.0"
nom = "8.0.0"

# log
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }

# http request
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio = { version = "1.50.0", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "fs",
  "io-util",
  "macros",
] }
eventsource-stream = "0.2.3"
futures = "0.3.32"
async-stream = "0.3.6"
async-compat = "0.2.5"
smol = "2.0.2"

get-selected-text = "0.1.6"

# config
toml = "1.0.7"

# hotkey
global-hotkey = { version = "0.7.0", features = ["serde", "tracing"] }

[dev-dependencies]
anyhow = "1.0.102"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
image = { version = "0.25.10", default-features = false }
xcap = "0.9.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
