[package]
name = "ai-chat"
version = "0.1.0"
description = "A desktop AI chat app built with GPUI."
authors = ["suxiaoshao <48886207+suxiaoshao@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/suxiaoshao/gpui"
homepage = "https://github.com/suxiaoshao/gpui"
edition = "2024"
build = "build.rs"

[package.metadata.cargo-shear]
ignored = ["libsqlite3-sys"]

[package.metadata.bundle]
name = "AI Chat"
identifier = "top.sushao.ai-chat"
publisher = "CN=Sushao"
short_description = "A desktop AI chat app built with GPUI."
long_description = """
AI Chat is a GPUI-based desktop application with chat history, templates,
streaming responses, and web search support.
"""
category = "DeveloperTool"

[features]
default = ["tree-sitter-languages-basic"]
dhat-heap = ["dep:dhat"]
tree-sitter-languages-basic = [
  "gpui-component/tree-sitter-bash",
  "gpui-component/tree-sitter-c",
  "gpui-component/tree-sitter-css",
  "gpui-component/tree-sitter-diff",
  "gpui-component/tree-sitter-go",
  "gpui-component/tree-sitter-graphql",
  "gpui-component/tree-sitter-html",
  "gpui-component/tree-sitter-java",
  "gpui-component/tree-sitter-javascript",
  "gpui-component/tree-sitter-markdown",
  "gpui-component/tree-sitter-python",
  "gpui-component/tree-sitter-rust",
  "gpui-component/tree-sitter-sql",
  "gpui-component/tree-sitter-svelte",
  "gpui-component/tree-sitter-toml",
  "gpui-component/tree-sitter-tsx",
  "gpui-component/tree-sitter-typescript",
  "gpui-component/tree-sitter-yaml",
]
tree-sitter-languages-full = ["gpui-component/tree-sitter-languages"]

[dependencies]
dhat = { version = "0.3.3", optional = true }
# ui
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets = { workspace = true }
app-assets.workspace = true
app-theme = { workspace = true, default-features = false, features = [
  "system-accent",
  "theme-picker",
] }
window-ext = { workspace = true }
platform-ext = { workspace = true }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }
anyhow = "1.0.102"
tray-icon = { version = "0.24.0", default-features = false, features = [
  "common-controls-v6",
] }
image = { version = "0.25.10", default-features = false, features = ["png"] }

# i18n
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
sys-locale = "0.3.2"

# err
thiserror = "2.0.18"

# database
diesel = { version = "2.3.9", features = [
  "sqlite",
  "r2d2",
  "time",
  "returning_clauses_for_sqlite_3_35",
  "serde_json",
] }
libsqlite3-sys = { version = "0.37.0", features = ["bundled-windows"] }
dirs-next = "2.0.0"
time = { version = "0.3.47", features = ["local-offset", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
pinyin = "0.11.0"
nom = "8.0.0"

# log
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }

# http request
reqwest = { version = "0.13.3", features = ["json", "stream"] }
tokio = { version = "1.52.3", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "fs",
  "io-util",
  "macros",
] }
eventsource-stream = "0.2.3"
futures = "0.3.32"
async-stream = "0.3.6"
async-compat = "0.2.5"
smol = "2.0.2"

get-selected-text = "0.1.6"

# config
toml = "1.1.2"

# hotkey
global-hotkey = { version = "0.8.0", features = ["serde", "tracing"] }

[dev-dependencies]
anyhow = "1.0.102"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
tray-icon = { version = "0.24.0", default-features = false, features = [
  "common-controls-v6",
  "gtk",
] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
xcap = "0.9.4"

[target.'cfg(target_os = "windows")'.build-dependencies]
image = { version = "0.25.10", default-features = false, features = ["ico", "png"] }
winresource = "0.1"
