[package]
name = "feiwen"
version = "0.1.0"
edition = "2024"

[dependencies]
# ui
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
sys-locale = "0.3.2"

# err
thiserror = "2.0.18"

# http
reqwest = {version = "0.13.2",features=["query"]}
async-compat = "0.2.5"

# html
scraper = "0.25.0"
nom = "8.0.0"
regex = "1.12.3"
url = "2.5.8"

# database
diesel = { version = "2.3.6", features = ["sqlite", "r2d2"] }
dirs-next = "2.0.0"

# log
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["local-time"] }

[dev-dependencies]
anyhow = "1.0.102"
