[package]
name = "feiwen"
version = "0.1.0"
description = "A GPUI desktop app for Feiwen novel data fetching and querying."
authors = ["suxiaoshao <48886207+suxiaoshao@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/suxiaoshao/gpui"
homepage = "https://github.com/suxiaoshao/gpui"
edition = "2024"

[package.metadata.bundle]
name = "Feiwen"
identifier = "top.sushao.feiwen"
publisher = "CN=Sushao"
icon = [
  "build-assets/icon/app-icon.ico",
  "build-assets/icon/app-icon.iconset/icon_32x32.png",
  "build-assets/icon/app-icon.iconset/icon_128x128.png",
  "build-assets/icon/app-icon.iconset/icon_128x128@2x.png",
  "build-assets/icon/app-icon.iconset/icon_256x256.png",
  "build-assets/icon/app-icon.iconset/icon_256x256@2x.png",
  "build-assets/icon/app-icon.iconset/icon_512x512.png",
  "build-assets/icon/app-icon.iconset/icon_512x512@2x.png",
]
short_description = "A GPUI desktop app for Feiwen novel data fetching and querying."
long_description = """
Feiwen is a GPUI-based desktop application for fetching, storing, and querying
Feiwen novel metadata.
"""
category = "DeveloperTool"

[dependencies]
# ui
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
app-assets.workspace = true
app-theme = { workspace = true, default-features = false, features = ["system-accent"] }
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
sys-locale = "0.3.2"
pinyin = "0.11.0"

# err
thiserror = "2.0.18"

# http
reqwest = {version = "0.13.3",features=["query"]}
async-compat = "0.2.5"

# html
scraper = "0.26.0"
nom = "8.0.0"
regex = "1.12.3"
url = "2.5.8"

# database
diesel = { version = "2.3.9", features = ["sqlite", "r2d2"] }
dirs-next = "2.0.0"

# log
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }

[dev-dependencies]
anyhow = "1.0.102"
