[package]
name = "http-client"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui.workspace = true
gpui-component = { workspace = true, features = [
  "tree-sitter-languages",
] }
gpui-component-assets.workspace = true

url = "2.5.8"
thiserror = "2.0.18"

# log
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["local-time"] }
dirs-next = "2.0.0"
