[package]
name = "http-client"
version = "0.1.0"
description = "A desktop HTTP client built with GPUI."
authors = ["suxiaoshao <48886207+suxiaoshao@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/suxiaoshao/gpui"
homepage = "https://github.com/suxiaoshao/gpui"
edition = "2024"

[package.metadata.bundle]
name = "HTTP Client"
identifier = "top.sushao.http-client"
publisher = "CN=Sushao"
short_description = "A desktop HTTP client built with GPUI."
long_description = """
HTTP Client is a GPUI-based desktop application for composing and inspecting
HTTP requests.
"""
category = "DeveloperTool"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component = { workspace = true, features = [
  "tree-sitter-languages",
] }
gpui-component-assets.workspace = true
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
sys-locale = "0.3.2"

url = "2.5.8"
thiserror = "2.0.18"

# log
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }
dirs-next = "2.0.0"
