[package]
name = "novel-download"
version = "0.1.0"
edition = "2024"

[dependencies]
# ui
gpui.workspace = true
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }

# error
thiserror = "2.0.12"

# http
reqwest = { version = "0.12.12", features = [
    "gzip",
    "rustls-tls",
    "charset",
], default-features = false }

# parser
nom = "8.0.0"
scraper = "0.23.1"

# async
futures = "0.3.31"
async-stream = "0.3.6"
async-compat = "0.2.4"

# path
dirs-next = "2.0.0"
smol = "2.0.2"

# log
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }

[dev-dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.0", default-features = false, features = ["macros"] }
