[package]
name = "novel-download"
version = "0.1.0"
edition = "2024"

[dependencies]
# ui
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

# error
thiserror = "2.0.17"

# http
reqwest = { version = "0.12.28", features = [
    "gzip",
    "rustls-tls",
    "charset",
], default-features = false }

# parser
nom = "8.0.0"
scraper = "0.25.0"

# async
futures = "0.3.31"
async-stream = "0.3.6"
async-compat = "0.2.5"

# path
dirs-next = "2.0.0"
smol = "2.0.2"

# log
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["local-time"] }

[dev-dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", default-features = false, features = ["macros"] }
