[package]
name = "novel-download"
version = "0.1.0"
description = "A GPUI desktop app for downloading novels."
authors = ["suxiaoshao <48886207+suxiaoshao@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/suxiaoshao/gpui"
homepage = "https://github.com/suxiaoshao/gpui"
edition = "2024"

[package.metadata.bundle]
name = "Novel Download"
identifier = "top.sushao.novel-download"
publisher = "CN=Sushao"
short_description = "A GPUI desktop app for downloading novels."
long_description = """
Novel Download is a GPUI-based desktop application for downloading novel
content from supported sources.
"""
category = "Utility"

[dependencies]
# ui
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
sys-locale = "0.3.2"

# error
thiserror = "2.0.18"

# http
reqwest = { version = "0.13.3", features = [
    "gzip",
    "charset",
    "query"
], default-features = false }

# parser
nom = "8.0.0"
scraper = "0.26.0"

# async
futures = "0.3.32"
async-stream = "0.3.6"
async-compat = "0.2.5"

# path
dirs-next = "2.0.0"
smol = "2.0.2"

# log
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }

[dev-dependencies]
anyhow = "1.0.102"
tokio = { version = "1.52.2", default-features = false, features = ["macros"] }
