[package]
name = "ai-chat-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ai-chat-core.workspace = true
ai-chat-db.workspace = true
async-trait = "0.1.89"
futures = "0.3.32"
hex = "0.4.3"
rig-core.workspace = true
rmcp.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.52.3", features = ["sync", "time"] }
tokio-util = "0.7.18"
tracing = "0.1.44"

[dev-dependencies]
rig-core = { workspace = true, features = ["test-utils"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt", "sync", "time"] }
