[package]
name = "ai-chat-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ai-chat-core.workspace = true
ai-chat-db.workspace = true
async-trait = "0.1.89"
base64 = "0.22.1"
dirs = "6.0.0"
futures = "0.3.32"
globset = "0.4.18"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
hex = "0.4.3"
ignore = "0.4.25"
regex = "1.12.3"
rig-core.workspace = true
rmcp.workspace = true
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
similar = "2.7.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.52.3", features = ["sync", "time"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
url = "2.5.8"

[dev-dependencies]
rig-core = { workspace = true, features = ["test-utils"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt", "sync", "time"] }
