[package]
name = "ai-chat-db"
version = "0.1.0"
edition = "2024"

[dependencies]
ai-chat-core.workspace = true
diesel = { version = "2.3.9", features = [
  "sqlite",
  "r2d2",
  "returning_clauses_for_sqlite_3_35",
  "serde_json",
] }
libsqlite3-sys = { version = "0.37.0", features = ["bundled-windows"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing", "serde"] }
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.27.0"
