[package]
name = "platform-ext"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"

[target.'cfg(target_os="macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = { version = "0.3.2", features = [
  "CGColorSpace",
  "CGDataProvider",
  "CGDirectDisplay",
  "CGGeometry",
  "CGImage",
  "CGWindow",
] }
objc2-foundation = "0.3.2"
