[package]
name = "platform-ext"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
futures-channel = "0.3.32"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
thiserror = "2.0.18"
url = "2.5.8"

[build-dependencies]
windows-bindgen = "0.66.0"

[target.'cfg(target_os="macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = { version = "0.3.2", features = [
  "CGColorSpace",
  "CGDataProvider",
  "CGDirectDisplay",
  "CGGeometry",
  "CGImage",
  "CGWindow",
] }
objc2-foundation = "0.3.2"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "ApplicationModel_DataTransfer",
  "Foundation",
  "Foundation_Collections",
  "Globalization",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "Graphics_Imaging",
  "Media_Ocr",
  "Security_Authorization_AppCapabilityAccess",
  "Storage",
  "Storage_Streams",
  "System",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.62.2"
windows-future = "0.3.2"
